--- a/tutoriais_python/03_operadores_aritmeticos.ipynb
+++ b/tutoriais_python/03_operadores_aritmeticos.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Curso de Python Básico\n",
     "\n",
@@ -16,23 +15,18 @@
     "\n",
     "* 1. Conceitos Básicos\n",
     "    * 1.7 Operadores Aritméticos"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "##  1. Conceitos Básicos"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-27T12:58:36.352675Z",
-     "start_time": "2021-08-27T12:58:36.344676Z"
-    }
-   },
    "source": [
     "#### 1.7 Operadores Aritiméticos\n",
     "- Adição\n",
@@ -41,141 +35,141 @@
     "- Divisão\n",
     "- Expondenciação\n",
     "- Resto da divisão"
-   ]
+   ],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-27T12:58:36.352675Z",
+     "start_time": "2021-08-27T12:58:36.344676Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "source": [
+    "# adição\r\n",
+    "1 + 1"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "2"
       ]
      },
-     "execution_count": 1,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 1
     }
    ],
-   "source": [
-    "# adição\n",
-    "1 + 1"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "source": [
+    "# multiplicação\r\n",
+    "1 * 3"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "3"
       ]
      },
-     "execution_count": 2,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 2
     }
    ],
-   "source": [
-    "# multiplicação\n",
-    "1 * 3"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "source": [
+    "# Divisão (float)\r\n",
+    "1 / 2"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.5"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 3
     }
    ],
-   "source": [
-    "# Divisão (float)\n",
-    "1 / 2"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "source": [
+    "# Expondenciação\r\n",
+    "2 ** 4"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "16"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 4
     }
    ],
-   "source": [
-    "# Expondenciação\n",
-    "2 ** 4"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "source": [
+    "# Resto da divisão\r\n",
+    "4 % 2"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0"
       ]
      },
-     "execution_count": 5,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 5
     }
    ],
-   "source": [
-    "# Resto da divisão\n",
-    "4 % 2"
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "source": [
+    "(2 + 3) * (5 + 5) "
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "50"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
-   "source": [
-    "(2 + 3) * (5 + 5) "
-   ]
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-27T13:02:00.190683Z",
-     "start_time": "2021-08-27T13:02:00.173684Z"
-    }
-   },
    "source": [
     "##### 1.7.1 Ordem das operações\n",
     "\n",
@@ -189,207 +183,294 @@
     "\n",
     "**Parenteses** tem a precedência mais alta e pode ser usado para força a ordem de uma expressão. A **Exponenciação** tem a próxima precedência mais alta. A **Multiplicação e a Divisão** tem a precedência mais alta do que a **adição e subtração**.Operadores com a mesma precedência são avaliados da esquerda para direita.\n",
     "        "
-   ]
+   ],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-27T13:02:00.190683Z",
+     "start_time": "2021-08-27T13:02:00.173684Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "source": [
+    "(1 + 2) * 4"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "12"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-27T13:03:55.098550Z",
      "start_time": "2021-08-27T13:03:55.080551Z"
     }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "(1 + 2) * 4"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-27T13:04:14.731243Z",
-     "start_time": "2021-08-27T13:04:14.727245Z"
-    }
-   },
+   "source": [
+    "2 * 2 ** 3 "
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "16"
       ]
      },
-     "execution_count": 8,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 8
     }
    ],
-   "source": [
-    "2 * 2 ** 3 "
-   ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-27T13:04:14.731243Z",
+     "start_time": "2021-08-27T13:04:14.727245Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-27T13:04:38.852360Z",
-     "start_time": "2021-08-27T13:04:38.847363Z"
-    }
-   },
+   "source": [
+    "2 + 5 * 2"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "12"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 9
     }
    ],
-   "source": [
-    "2 + 5 * 2"
-   ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-27T13:04:38.852360Z",
+     "start_time": "2021-08-27T13:04:38.847363Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-08-27T13:04:54.907281Z",
-     "start_time": "2021-08-27T13:04:54.902283Z"
-    }
-   },
+   "source": [
+    "2 + 10 / 2"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "7.0"
       ]
      },
-     "execution_count": 10,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 10
     }
    ],
-   "source": [
-    "2 + 10 / 2"
-   ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-08-27T13:04:54.907281Z",
+     "start_time": "2021-08-27T13:04:54.902283Z"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
+   "source": [
+    "(1 + 2) ** 2 * 10 / 2 + 11 - 1"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "55.0"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 11
+    }
+   ],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-27T13:06:06.669559Z",
      "start_time": "2021-08-27T13:06:06.664558Z"
     }
-   },
-   "outputs": [],
-   "source": [
-    "(1 + 2) ** 2 * 10 / 2 + 11 - 1"
-   ]
+   }
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## Agora é sua vez!"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**1) Quanto é 7 elevado na potência 4?**"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 15,
+   "source": [
+    "7**4"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "2401"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 15
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**2) Qual o resultado da seguinte expressão: (5 + 8) ** 2 * 10 / 2 + 11 - 1** Descreva a ordem que ocorre as operações!"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "###### - descreva a ordem das operações em tópicos\n",
-    "    - \n",
-    "    - \n"
-   ]
+    "#Primeiro soma-se o conteúdo dos parênteses\r\n",
+    "(5+8)**2*10/2+11-1\r\n",
+    "#atualizando\r\n",
+    "13**2*10/2+11-1"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "source": [
+    "#Logo após a operação a ser realizada é de potenciação\r\n",
+    "#atualizando:\r\n",
+    "169*10/2+11-1"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "169"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 1
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "#Em seguida, segue-se a operação de multiplicação ,depois divisão\r\n",
+    "# (da esquerda pra direita, por serem de mesmo valor)\r\n",
+    "1690/2+11-1\r\n",
+    "#atualizando\r\n",
+    "845+11-1\r\n",
+    "#finalizando em:\r\n",
+    "855"
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**3) Explique o resultado da seguinte expressão: 5 + 8 ** 2 * 10 / 2 + 11 - 1** Descreva a ordem que ocorre as operações!"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 8,
+   "source": [
+    "5+8**2*10/2+11-1\r\n",
+    "#resolvendo a potenciação temos:\r\n",
+    "5+64*10/2+11-1\r\n",
+    "#em seguida resolvemos a multiplicação e depois a divisão\r\n",
+    "# por ordem (esquerda pra direita), temos:\r\n",
+    "5+640/2+11-1\r\n",
+    "#em seguida temos:\r\n",
+    "5+320+11-1\r\n",
+    "#resolvemos  a operação da esquerda pra direita\r\n",
+    "#obtendo\r\n",
+    "335"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "335"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 8
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "**4) Explique o resultado da seguinte expressão: 5 + 8 ** 2 * 10 / 2 + 11 - 1**. Descreva a ordem que ocorre as operações!"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [
+    "#questão repetida"
+   ],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.11 64-bit ('rsd': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -402,6 +483,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.11"
+  },
+  "interpreter": {
+   "hash": "42f74353e3a9b5a4cb43330aab4e888bd8c99887f1f7b7373840781ed1656684"
   }
  },
  "nbformat": 4,
