--- a/tutoriais_python/02_tipos_de_dados_convertendo_tipos.ipynb
+++ b/tutoriais_python/02_tipos_de_dados_convertendo_tipos.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Curso de Python Básico\n",
     "\n",
@@ -75,18 +74,18 @@
     "    * 9.5 Herança\n",
     "    * 9.6 Polimofismo\n",
     "  "
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "##  1. Conceitos Básicos"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### 1.5. Tipos de dados\n",
     "- Inteiro\n",
@@ -94,153 +93,177 @@
     "- Boleano\n",
     "- String\n",
     "- Nulo"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Int\n",
+    "# Int\r\n",
     "numero = 1"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Float\n",
+    "# Float\r\n",
     "numero = 1.0"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# String\n",
-    "texto = \"'Python é fácil'\"\n",
-    "# 'Citação simples'\n",
+    "# String\r\n",
+    "texto = \"'Python é fácil'\"\r\n",
+    "# 'Citação simples'\r\n",
     "# \"Citações duplas\""
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Boleano\n",
+    "# Boleano\r\n",
     "brasileiro = True"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Nulo\n",
+    "# Nulo\r\n",
     "dado = None"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "valor = '25'"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "#### 1.6 Verificando e modificando os tipos de dados"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "source": [
+    "# Consultando tipos de dados\r\n",
+    "type(dado)"
+   ],
+   "outputs": [],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-27T12:57:20.533380Z",
      "start_time": "2021-08-27T12:57:20.417383Z"
     }
-   },
-   "outputs": [],
-   "source": [
-    "# Consultando tipos de dados\n",
-    "type(dado)"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
-    "# Convertendo tipos de dados\n",
+    "# Convertendo tipos de dados\r\n",
     "int(numero)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "## Agora é sua vez\n",
-    "\n",
-    "1) Crie um programa que receberá nome, idade, salário e brasileiro. o nome é uma variável String, a idade é uma variável inteira, o salário é uma variável float e brasileiro é uma variável boleana. \n",
-    "\n",
-    "2) Converta o a variável idade para float e a variável brasileiro para string.\n",
-    "\n",
-    "3) Verifique o tipo de cada variável e imprima os valores e seus tipos conforme a saída abaixo:\n",
-    "\n",
-    "**Saída:** \n",
-    "- 'a variável idade é do tipo: {TIPO_DA_VARIAVEL}'\n",
-    "- 'a variável brasileiro é do tipo: {TIPO_DA_VARIAVEL}'\n",
+    "## Agora é sua vez\r\n",
+    "\r\n",
+    "1) Crie um programa que receberá nome, idade, salário e brasileiro. o nome é uma variável String, a idade é uma variável inteira, o salário é uma variável float e brasileiro é uma variável boleana. \r\n",
+    "\r\n",
+    "2) Converta o a variável idade para float e a variável brasileiro para string.\r\n",
+    "\r\n",
+    "3) Verifique o tipo de cada variável e imprima os valores e seus tipos conforme a saída abaixo:\r\n",
+    "\r\n",
+    "**Saída:** \r\n",
+    "- 'a variável idade é do tipo: {TIPO_DA_VARIAVEL}'\r\n",
+    "- 'a variável brasileiro é do tipo: {TIPO_DA_VARIAVEL}'\r\n",
     "- 'a variável nome é do tipo: {TIPO_DA_VARIAVEL}'"
-   ]
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "source": [
+    "nome = input(\"Digite seu nome: \")\r\n",
+    "idade = int(input(\"Digite sua idade: \"))\r\n",
+    "eh_br = bool(input(\"Você eh brasileiro (True:para verdadeiro e False:para falso) \"))\r\n",
+    "renda = float(input(\"Digite seu salario: \"))\r\n",
+    "\r\n",
+    "idade = float(idade)\r\n",
+    "eh_br = str(eh_br)\r\n",
+    "\r\n",
+    "print(f\"Variável:nome({nome}) eh do tipo {type(nome)}\")\r\n",
+    "print(f\"Variável:idade({idade}) eh do tipo {type(idade)}\")\r\n",
+    "print(f\"Variável:nacionalidade br({eh_br}) eh do tipo {type(eh_br)}\")\r\n",
+    "print(f\"Variável:renda(R${renda}) eh do tipo {type(renda)}\")"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Variável:nome(Ednael) eh do tipo <class 'str'>\n",
+      "Variável:idade(25.0) eh do tipo <class 'float'>\n",
+      "Variável:nacionalidade br(True) eh do tipo <class 'str'>\n",
+      "Variável:renda (R$2200.0) eh do tipo <class 'float'>\n"
+     ]
+    }
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.11 64-bit ('rsd': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -253,6 +276,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.11"
+  },
+  "interpreter": {
+   "hash": "42f74353e3a9b5a4cb43330aab4e888bd8c99887f1f7b7373840781ed1656684"
   }
  },
  "nbformat": 4,
