--- a/tutoriais_python/15_generetors.ipynb
+++ b/tutoriais_python/15_generetors.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# Curso de Python Básico\n",
     "\n",
@@ -20,51 +19,71 @@
     "    * 8.3 Tratando erros em Python\n",
     "    * 8.4 Lidando com String\n",
     "    * 8.5 Lidando com datas e tempo"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
+   "source": [
+    "##### 8.2 Generators \n",
+    "\n",
+    "Um recurso para criar iterators em python. Um generator é uma função que retorna um objeto que podemos interar sobre ele. Um generator não armazena todos os valores em memória, eles geram os valores interando sobre os dados. A maioria dos generators são implementados como função"
+   ],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-27T14:41:00.259327Z",
      "start_time": "2021-08-27T14:41:00.248329Z"
     }
-   },
-   "source": [
-    "##### 8.2 Generators \n",
-    "\n",
-    "Um recurso para criar iterators em python. Um generator é uma função que retorna um objeto que podemos interar sobre ele. Um generator não armazena todos os valores em memória, eles geram os valores interando sobre os dados. A maioria dos generators são implementados como função"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "source": [
+    "def count():\r\n",
+    "    for i in range(10):\r\n",
+    "        yield i"
+   ],
+   "outputs": [],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T19:18:52.310636Z",
      "start_time": "2021-09-27T19:18:52.292636Z"
     }
-   },
-   "outputs": [],
-   "source": [
-    "def count():\n",
-    "    for i in range(10):\n",
-    "        yield i"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-27T19:18:53.104635Z",
-     "start_time": "2021-09-27T19:18:53.089635Z"
-    }
-   },
+   "source": [
+    "d"
+   ],
    "outputs": [
     {
-     "name": "stdout",
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'd' is not defined",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_13336/3161387801.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0md\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'd' is not defined"
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "source": [
+    "for item in count():\r\n",
+    "    print(item)"
+   ],
+   "outputs": [
+    {
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "0\n",
       "1\n",
@@ -79,21 +98,16 @@
      ]
     }
    ],
-   "source": [
-    "for item in count():\n",
-    "    print(item)"
-   ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-27T19:18:53.104635Z",
+     "start_time": "2021-09-27T19:18:53.089635Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-27T19:18:53.652198Z",
-     "start_time": "2021-09-27T19:18:53.641198Z"
-    }
-   },
-   "outputs": [],
    "source": [
     "# generator version\n",
     "def fibonacci(n):\n",
@@ -101,21 +115,26 @@
     "    for i in range(n):\n",
     "        yield a\n",
     "        a, b = b, a + b"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-27T19:18:53.652198Z",
+     "start_time": "2021-09-27T19:18:53.641198Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-27T19:18:54.164627Z",
-     "start_time": "2021-09-27T19:18:54.145627Z"
-    }
-   },
+   "source": [
+    "for x in fibonacci(10):\n",
+    "    print(x)"
+   ],
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
       "1\n",
       "1\n",
@@ -130,162 +149,163 @@
      ]
     }
    ],
-   "source": [
-    "for x in fibonacci(10):\n",
-    "    print(x)"
-   ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-27T19:18:54.164627Z",
+     "start_time": "2021-09-27T19:18:54.145627Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "source": [
+    "sequencia = fibonacci(10)"
+   ],
+   "outputs": [],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T19:18:54.554622Z",
      "start_time": "2021-09-27T19:18:54.545621Z"
     }
-   },
-   "outputs": [],
-   "source": [
-    "sequencia = fibonacci(10)"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-27T19:18:55.131625Z",
-     "start_time": "2021-09-27T19:18:55.113625Z"
-    }
-   },
+   "source": [
+    "sequencia"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "<generator object fibonacci at 0x00000243C3D72BA0>"
       ]
      },
-     "execution_count": 6,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 6
     }
    ],
-   "source": [
-    "sequencia"
-   ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-27T19:18:55.131625Z",
+     "start_time": "2021-09-27T19:18:55.113625Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "source": [
+    "next(sequencia)"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T19:18:56.000621Z",
      "start_time": "2021-09-27T19:18:55.984623Z"
     }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "next(sequencia)"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "source": [
+    "# criando objeto iterável\n",
+    "String = 'Meu Nome é Nicksson'\n",
+    "it_String = iter(String)"
+   ],
+   "outputs": [],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T19:18:56.838621Z",
      "start_time": "2021-09-27T19:18:56.825620Z"
     }
-   },
-   "outputs": [],
-   "source": [
-    "# criando objeto iterável\n",
-    "String = 'Meu Nome é Nicksson'\n",
-    "it_String = iter(String)"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-27T19:18:58.692405Z",
-     "start_time": "2021-09-27T19:18:58.681406Z"
-    }
-   },
+   "source": [
+    "next(it_String)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'M'"
       ]
      },
-     "execution_count": 9,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 9
     }
    ],
-   "source": [
-    "next(it_String)"
-   ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-27T19:18:58.692405Z",
+     "start_time": "2021-09-27T19:18:58.681406Z"
+    }
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "source": [
+    "# criando objeto iterável\n",
+    "my_list = iter([1,2,3,4,5,6,7,8,9,10])"
+   ],
+   "outputs": [],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T19:18:58.926615Z",
      "start_time": "2021-09-27T19:18:58.913611Z"
     }
-   },
-   "outputs": [],
-   "source": [
-    "# criando objeto iterável\n",
-    "my_list = iter([1,2,3,4,5,6,7,8,9,10])"
-   ]
+   }
   },
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-09-27T19:18:59.443902Z",
-     "start_time": "2021-09-27T19:18:59.434904Z"
-    }
-   },
+   "source": [
+    "next(my_list)"
+   ],
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "1"
       ]
      },
-     "execution_count": 11,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 11
     }
    ],
-   "source": [
-    "next(my_list)"
-   ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-09-27T19:18:59.443902Z",
+     "start_time": "2021-09-27T19:18:59.434904Z"
+    }
+   }
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.11 64-bit ('rsd': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -298,6 +318,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.11"
+  },
+  "interpreter": {
+   "hash": "42f74353e3a9b5a4cb43330aab4e888bd8c99887f1f7b7373840781ed1656684"
   }
  },
  "nbformat": 4,
