--- a/desenvolvimento.ipynb
+++ b/desenvolvimento.ipynb
@@ -310,6 +310,165 @@
     }
    ],
    "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "source": [
+    "frames = pd.concat([df_gasolina['PMV.Norm'],barril.loc['2013-01-1':,'VBar.Norm'],dollar.loc['2013-01-1':,'VU$.Norm']],axis=1)\r\n",
+    "frames.corr()"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "C:\\Users\\ednae\\anaconda3\\envs\\rsd\\lib\\site-packages\\pandas\\core\\indexing.py:862: FutureWarning: Value based partial slicing on non-monotonic DatetimeIndexes with non-existing keys is deprecated and will raise a KeyError in a future Version.\n",
+      "  return getattr(section, self.name)[new_key]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PMV.Norm</th>\n",
+       "      <th>VBar.Norm</th>\n",
+       "      <th>VU$.Norm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>PMV.Norm</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.388830</td>\n",
+       "      <td>0.832829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VBar.Norm</th>\n",
+       "      <td>-0.388830</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.639191</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VU$.Norm</th>\n",
+       "      <td>0.832829</td>\n",
+       "      <td>-0.639191</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           PMV.Norm  VBar.Norm  VU$.Norm\n",
+       "PMV.Norm   1.000000  -0.388830  0.832829\n",
+       "VBar.Norm -0.388830   1.000000 -0.639191\n",
+       "VU$.Norm   0.832829  -0.639191  1.000000"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 216
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "source": [
+    "\r\n",
+    "frames.loc['2015-01-01':'2019-01-01'].corr()\r\n",
+    "#analisando apenas o período em questão"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "C:\\Users\\ednae\\anaconda3\\envs\\rsd\\lib\\site-packages\\pandas\\core\\indexing.py:862: FutureWarning: Value based partial slicing on non-monotonic DatetimeIndexes with non-existing keys is deprecated and will raise a KeyError in a future Version.\n",
+      "  return getattr(section, self.name)[new_key]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PMV.Norm</th>\n",
+       "      <th>VBar.Norm</th>\n",
+       "      <th>VU$.Norm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>PMV.Norm</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.655776</td>\n",
+       "      <td>0.504830</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VBar.Norm</th>\n",
+       "      <td>0.655776</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.026837</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VU$.Norm</th>\n",
+       "      <td>0.504830</td>\n",
+       "      <td>0.026837</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           PMV.Norm  VBar.Norm  VU$.Norm\n",
+       "PMV.Norm   1.000000   0.655776  0.504830\n",
+       "VBar.Norm  0.655776   1.000000  0.026837\n",
+       "VU$.Norm   0.504830   0.026837  1.000000"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 215
+    }
+   ],
+   "metadata": {}
   }
  ],
  "metadata": {
