--- a/desenvolvimento.ipynb
+++ b/desenvolvimento.ipynb
@@ -392,21 +392,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 218,
    "source": [
-    "\r\n",
     "frames.loc['2015-01-01':'2019-01-01'].corr()\r\n",
     "#analisando apenas o período em questão"
    ],
    "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stderr",
-     "text": [
-      "C:\\Users\\ednae\\anaconda3\\envs\\rsd\\lib\\site-packages\\pandas\\core\\indexing.py:862: FutureWarning: Value based partial slicing on non-monotonic DatetimeIndexes with non-existing keys is deprecated and will raise a KeyError in a future Version.\n",
-      "  return getattr(section, self.name)[new_key]\n"
-     ]
-    },
     {
      "output_type": "execute_result",
      "data": {
@@ -465,7 +456,77 @@
       ]
      },
      "metadata": {},
-     "execution_count": 215
+     "execution_count": 218
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "source": [
+    "frames.loc['2015-01-01':].corr()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PMV.Norm</th>\n",
+       "      <th>VBar.Norm</th>\n",
+       "      <th>VU$.Norm</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>PMV.Norm</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.525400</td>\n",
+       "      <td>0.694387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VBar.Norm</th>\n",
+       "      <td>0.525400</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.120171</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VU$.Norm</th>\n",
+       "      <td>0.694387</td>\n",
+       "      <td>-0.120171</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           PMV.Norm  VBar.Norm  VU$.Norm\n",
+       "PMV.Norm   1.000000   0.525400  0.694387\n",
+       "VBar.Norm  0.525400   1.000000 -0.120171\n",
+       "VU$.Norm   0.694387  -0.120171  1.000000"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 219
     }
    ],
    "metadata": {}
