--- a/readme.me
+++ b/readme.me
@@ -1,4 +1,5 @@
 Esse repositório é destinado ao armazenamento das produções realizadas
 na residencia em data science
 
-link para base de dados da gasolina: https://drive.google.com/file/d/1YtIWtXMgKnRyx30cykBX1OHeG0o-cMzI/view?usp=sharing
+Jamboard das discussões: 
+https://jamboard.google.com/d/1D-jBcZfBLo0I4AEcsquQ_rU7Q6e4C51yvSvZvgaLfXc/viewer?f=1
