--- a/tutoriais_python/08_operadores_de_comparacao.ipynb
+++ b/tutoriais_python/08_operadores_de_comparacao.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:30:36.002917Z",
@@ -54,7 +54,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "35 ns ± 0.234 ns per loop (mean ± std. dev. of 7 runs, 10000000 loops each)\n"
+      "72.7 ns ± 8.5 ns per loop (mean ± std. dev. of 7 runs, 10000000 loops each)\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:16:13.571481Z",
@@ -209,7 +209,7 @@
        "False"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:16:47.629845Z",
@@ -235,7 +235,7 @@
        "False"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:21:17.649318Z",
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:22:44.798292Z",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:22:48.536833Z",
@@ -289,7 +289,7 @@
        "('nome', '1', '7', '8')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,10 +318,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6 é maior que 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "n1 = input(\"Digite um numero: \")\n",
+    "n2 = input('Digite outro número: ')\n",
+    "\n",
+    "if n1 == n2:\n",
+    "    print('Os números são iguais')\n",
+    "if n1 < n2:\n",
+    "    print(f'{n2} é maior que {n1}')\n",
+    "if n1 > n2:\n",
+    "    print(f'{n1} é maior que {n2}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -336,16 +354,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 está\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[None]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numeros = (0,2,4,6,8,10)\n",
+    "[print(f'{num} está') for num in numeros if num==1 or num==2]"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "42f74353e3a9b5a4cb43330aab4e888bd8c99887f1f7b7373840781ed1656684"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.11 64-bit ('rsd': conda)",
    "name": "python3"
   },
   "language_info": {
