--- a/tutoriais_python/10_estrutura_condicional.ipynb
+++ b/tutoriais_python/10_estrutura_condicional.ipynb
@@ -151,10 +151,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O número 1 é impar\n"
+     ]
+    }
+   ],
+   "source": [
+    "numero = int(input(\"Digite um número: \"))\n",
+    "if numero%2==0:\n",
+    "    print(f'O número {numero} é par')\n",
+    "else:\n",
+    "    print(f'O número {numero} é impar')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -165,16 +179,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Adulto (sustentador dos outros 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "idade = int(input(\"Digite sua idade: \"))\n",
+    "if idade<12:\n",
+    "    print(\"Criança (assistidor de peppa pig)\")\n",
+    "elif idade>=12 and idade<=17:\n",
+    "    print(\"Adolescente (jogador de free fire)\")\n",
+    "elif idade>=18 and idade<60:\n",
+    "    print(\"Adulto (sustentador dos outros 2)\")\n",
+    "elif idade>=60:\n",
+    "    print(\"Vovô\")"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "42f74353e3a9b5a4cb43330aab4e888bd8c99887f1f7b7373840781ed1656684"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.11 64-bit ('rsd': conda)",
    "name": "python3"
   },
   "language_info": {
