--- a/tutoriais_python/12_estrutura_de_repeticao.ipynb
+++ b/tutoriais_python/12_estrutura_de_repeticao.ipynb
@@ -422,10 +422,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Valor não correspondente\n",
+      "Valor não correspondente\n",
+      "Nota armazenada com sucesso!\n"
+     ]
+    }
+   ],
+   "source": [
+    "errado = True\n",
+    "while errado:\n",
+    "    nota = int(input(\"Digite uma nota de 0 a 10: \"))\n",
+    "    if nota>=0 and nota<=10:\n",
+    "        print('Nota armazenada com sucesso!')\n",
+    "        errado = False\n",
+    "    else:\n",
+    "        print('Valor não correspondente')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -436,10 +455,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "maior=0\n",
+    "for i in range(5):\n",
+    "    numero = int(input(\"Digite um número: \"))\n",
+    "    if numero>maior:\n",
+    "        maior=numero\n",
+    "print(maior)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -455,10 +489,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2,\n",
+       " 4,\n",
+       " 6,\n",
+       " 8,\n",
+       " 10,\n",
+       " 12,\n",
+       " 14,\n",
+       " 16,\n",
+       " 18,\n",
+       " 20,\n",
+       " 22,\n",
+       " 24,\n",
+       " 26,\n",
+       " 28,\n",
+       " 30,\n",
+       " 32,\n",
+       " 34,\n",
+       " 36,\n",
+       " 38,\n",
+       " 40,\n",
+       " 42,\n",
+       " 44,\n",
+       " 46,\n",
+       " 48]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[num for num in range(1,50) if num%2==0]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -474,10 +544,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def rec_fib(n):\n",
+    "    if n > 1:\n",
+    "        return rec_fib(n-1) + rec_fib(n-2)\n",
+    "    return n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print(rec_fib(i))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -493,16 +590,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Programa que calcula média de idade de uma turma\n",
+      "\n",
+      "Turma de adultos\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Programa que descreve uma turma\\n\")\n",
+    "people=int(input(\"Digite o número de pessoas da sua turma: \"))\n",
+    "sum_idades = 0\n",
+    "for i in range(0,people):\n",
+    "    sum_idades+=int(input(f\"Qual a idade da {i+1}-ésima pessoal? \"))\n",
+    "med=sum_idades/people\n",
+    "if med<=25:\n",
+    "    print('Turma jovem!')\n",
+    "if med>25 and med<60:\n",
+    "    print('Turma de adultos')\n",
+    "if med>=60:\n",
+    "    print('Turma de idosos')"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "42f74353e3a9b5a4cb43330aab4e888bd8c99887f1f7b7373840781ed1656684"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.11 64-bit ('rsd': conda)",
    "name": "python3"
   },
   "language_info": {
