--- a/tutoriais_python/07_estrutura_de_dados_conjuntos.ipynb
+++ b/tutoriais_python/07_estrutura_de_dados_conjuntos.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T17:58:51.052867Z",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T17:58:57.049579Z",
@@ -70,7 +70,7 @@
        "5"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T17:59:32.075631Z",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T17:59:48.520402Z",
@@ -110,7 +110,7 @@
        "{1, 2, 3, 6}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:02:19.123286Z",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:02:33.806851Z",
@@ -164,7 +164,7 @@
        "['a', 'b']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:03:01.304767Z",
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:05:29.067898Z",
@@ -204,7 +204,7 @@
        "{2, 4, 6, 8, 10}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:03:01.705988Z",
@@ -229,7 +229,7 @@
        "{1, 3, 5, 7, 9, 11, 12, 13, 14, 15}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:03:01.986030Z",
@@ -254,7 +254,7 @@
        "{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 20}"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:06:42.556407Z",
@@ -283,10 +283,10 @@
     {
      "data": {
       "text/plain": [
-       "{3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15}"
+       "{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15}"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -297,33 +297,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:06:44.696660Z",
      "start_time": "2021-09-27T18:06:44.682661Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "2",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-59-c3db8c08d9dc>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mset1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m: 2"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "set1.remove(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-27T14:07:12.815594Z",
@@ -338,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-27T14:07:23.820202Z",
@@ -352,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-27T14:07:26.467490Z",
@@ -366,7 +354,7 @@
        "set()"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -391,10 +379,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "set_num = {0,1,2,3,4,5,6,7,8,9,10}"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -405,10 +395,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "set_pares=set([num for num in set_num if num%2==0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0, 2, 4, 6, 8, 10}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set_pares"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -419,16 +431,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0, 2, 4, 6, 8, 10}\n",
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n",
+      "{1, 3, 5, 7, 9}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(set_num.intersection(set_pares))\n",
+    "print(set_num.union(set_pares))\n",
+    "print(set_num.difference(set_pares))"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "42f74353e3a9b5a4cb43330aab4e888bd8c99887f1f7b7373840781ed1656684"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.8.11 64-bit ('rsd': conda)",
    "name": "python3"
   },
   "language_info": {
