--- a/tutoriais_python/09_operadores_logicos.ipynb
+++ b/tutoriais_python/09_operadores_logicos.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:56:58.985977Z",
@@ -132,15 +132,17 @@
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "5>2 and 2<3 and 4<12"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -156,15 +158,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T18:57:03.024264Z",
      "start_time": "2021-09-27T18:57:03.015263Z"
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "5>2 and 2<3 or 4<12\n",
+    "#Permanece o mesmo valor, por que todas as operações acima são verdadeiras"
+   ]
   },
   {
    "cell_type": "code",
