--- a/tutoriais_python/14_list_comprehenssion.ipynb
+++ b/tutoriais_python/14_list_comprehenssion.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Curso de Python Básico\n",
     "\n",
@@ -19,11 +20,11 @@
     "    * 8.3 Tratando erros em Python\n",
     "    * 8.4 Lidando com String\n",
     "    * 8.5 Lidando com datas e tempo"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "###  8. Python Intermediario\n",
     "\n",
@@ -32,121 +33,149 @@
     "\n",
     "Estrutura é:\n",
     "- retorne este elemento | para a iteração | se a condição acontecer\n"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "x = [1,2,3,4,5,6]"
-   ],
-   "outputs": [],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-27T14:31:03.974738Z",
      "start_time": "2021-08-27T14:31:03.969738Z"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "x = [1,2,3,4,5,6]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "pares = []\r\n",
-    "for item in x:\r\n",
-    "    if item % 2 ==0:\r\n",
-    "        pares.append(item)\r\n",
-    "print(pares)"
-   ],
-   "outputs": [],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-27T14:31:04.256989Z",
      "start_time": "2021-08-27T14:31:04.239998Z"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "pares = []\n",
+    "for item in x:\n",
+    "    if item % 2 ==0:\n",
+    "        pares.append(item)\n",
+    "print(pares)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "[a for a in x if a % 2==0]"
-   ],
-   "outputs": [],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-08-27T14:32:39.527297Z",
      "start_time": "2021-08-27T14:32:39.520294Z"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "[a for a in x if a % 2==0]"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "[i**2 for i in [1,2,3,4,5] if i %2 !=0]"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "metadata": {},
    "outputs": [],
-   "metadata": {}
+   "source": []
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Agora é sua vez"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "**1) Crie um list comprehension que irá retornar os números ímpares dados uma sequência de 0 até 10**"
-   ],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T19:16:33.728027Z",
      "start_time": "2021-09-27T19:16:33.719025Z"
     }
-   }
+   },
+   "source": [
+    "**1) Crie um list comprehension que irá retornar os números ímpares dados uma sequência de 0 até 10**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 9]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in range(0,10) if i%2!=0]"
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "**2) Crie um list comprehension que irá retornar os números divisíveis por 2 e por 3 dados uma sequência de 0 até 10**"
-   ],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-09-27T19:24:18.167685Z",
      "start_time": "2021-09-27T19:24:18.152685Z"
     }
-   }
+   },
+   "source": [
+    "**2) Crie um list comprehension que irá retornar os números divisíveis por 2 e por 3 dados uma sequência de 0 até 10**"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "source": [],
-   "outputs": [],
-   "metadata": {}
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 6]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[i for i in range(0,11) if i%2==0 and i%3==0]"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "42f74353e3a9b5a4cb43330aab4e888bd8c99887f1f7b7373840781ed1656684"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.11 64-bit ('rsd': conda)"
+   "display_name": "Python 3.8.11 64-bit ('rsd': conda)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -159,9 +188,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.11"
-  },
-  "interpreter": {
-   "hash": "42f74353e3a9b5a4cb43330aab4e888bd8c99887f1f7b7373840781ed1656684"
   }
  },
  "nbformat": 4,
