--- a/readme.me
+++ b/readme.me
@@ -1,4 +1,12 @@
 Esse repositório é destinado ao armazenamento das produções realizadas
 na residencia em data science
 
-link para base de dados da gasolina: https://drive.google.com/file/d/1YtIWtXMgKnRyx30cykBX1OHeG0o-cMzI/view?usp=sharing
+Jamboard das discussões: 
+https://jamboard.google.com/d/1D-jBcZfBLo0I4AEcsquQ_rU7Q6e4C51yvSvZvgaLfXc/viewer?f=1
+Links das bases de dados:
+#Gasolina 2011 e 2012
+https://www.gov.br/anp/pt-br/centrais-de-conteudo/dados-abertos/serie-historica-de-precos-de-combustiveis
+#Petróleo Brent
+https://br.investing.com/commodities/brent-oil-historical-data
+#Dollar no Brasil
+https://br.investing.com/currencies/usd-brl-historical-data
